# karu

./: .gitignore  0.out  CMakeLists.txt  README.md  ex.mg  schur.out  test.cu  test.py  teste.py
karu/: compute.cpp  compute.hpp  matrix.cpp  matrix.hpp  tmp.hpp  types.hpp
old/: matrix.cpp  matrix.hpp  tmp.hpp  types.hpp
samples/: CMakeLists.txt
samples/camera/: Camera.cpp
scripts/: cameraModel.py  cameraModelBundle.py  cg.py  essentialMatrix.py  focalLength.py  fundamental.py  homographyEstimation.py  schur.py  svd.py
src/algebra/SVD/: AccurateBidiagonalSVD.hpp  GolubKahan.hpp  GolubKahanLanczosBid.hpp  GolubReinschSVD.hpp  Householder.hpp  QR.hpp  SVD.hpp
src/algebra/compute/: Buffer.cpp  Buffer.hpp  Compute.hpp  Context.cpp  Context.hpp  Kernel.cpp  Kernel.hpp  OpenCL.cpp  OpenCL.hpp  Program.cpp  Program.hpp
src/algebra/compute/lib/: Commom.cpp  Commom.hpp  Reduce.hpp  Scan.cpp  Scan.hpp  Sort.hpp
src/algebra/compute/lib/kernels/: kernels.hpp  kernels.template.in
src/algebra/compute/lib/kernels/opencl/: radix_sort_kernel.cl  reduce_kernel.cl  scan_kernel.cl
src/algebra/core/: types.hpp
src/algebra/core/compute/: Compute.hpp  ComputeBuffer.cpp  ComputeBuffer.hpp  ComputeContext.cpp  ComputeContext.hpp  ComputeKernel.cpp  ComputeKernel.hpp  ComputeProgram.cpp  ComputeProgram.hpp  ComputeStorage.cpp  ComputeStorage.hpp  OpenCL.cpp  OpenCL.hpp
src/algebra/lib/: Commom.cpp  Commom.hpp  Reduce.hpp  Scan.cpp  Scan.hpp  Sort.hpp
src/algebra/lib/kernels/: kernels.hpp  kernels.template.in
src/algebra/lib/kernels/opencl/: radix_sort.cl  radix_sort_kernel.cl  reduce_kernel.cl  scan_kernel.cl
src/algebra/linear/: ConjugateGradient.hpp  Linear.cpp  Linear.hpp  Rotation.hpp  SingularValueDecomposition.hpp  svd.hpp
src/algebra/matrix/: BlockSparseMatrixData.cpp  BlockSparseMatrixData.hpp  BlockSparseMatrixMultiplayer.cpp  BlockSparseMatrixMultiplayer.hpp  Matrix.cpp  Matrix.hpp  MatrixAdder.cpp  MatrixAdder.hpp  MatrixData.cpp  MatrixData.hpp  MatrixDivider.cpp  MatrixDivider.hpp  MatrixEchelonForm.cpp  MatrixEchelonForm.hpp  MatrixLU.cpp  MatrixLU.hpp  MatrixMultiplayer.cpp  MatrixMultiplayer.hpp  MatrixNullSpace.cpp  MatrixNullSpace.hpp  MatrixSubtractor.cpp  MatrixSubtractor.hpp  MatrixTransposer.cpp  MatrixTransposer.hpp  SparseMatrixData.cpp  SparseMatrixData.hpp  SparseMatrixMultiplayer.cpp  SparseMatrixMultiplayer.hpp
src/algebra/matrix/kernels/: kernels.hpp  kernels.template.in
src/algebra/matrix/kernels/opencl/: bsMM_kernel.cl  bsMV_kernel.cl
src/algebra/matrix/lib/: HashMap.cpp  HashMap.hpp  Sort.hpp
src/algebra/polynomial/: Polynomial.cpp  Polynomial.hpp
src/algebra/sparse/: SMatrix.cpp  SMatrix.hpp  SpMatrix.cpp  SpMatrix.hpp  SparseMatrixData.cpp  SparseMatrixData.hpp  SparseMatrixMultiplayer.cpp  SparseMatrixMultiplayer.hpp
src/algebra/sparse/lib/: HashMap.cpp
src/algebra/sparse/lib/kernels/: kernels.hpp  kernels.template.in
src/algebra/sparse/lib/kernels/opencl/: bsMV_kernel.cl
src/algebra/tensor/: Tensor.hpp
src/algebra/vector/: Vector.cpp  Vector.hpp
src/bundle/: BundleAdjustment.hpp  Homography.hpp
src/bundle/codegen/: Estimation.cpp  Estimation.hpp  Homography.cpp  Homography.hpp
src/camera/: Camera.hpp  CameraBundle.hpp
src/camera/codegen/: CameraModel.cpp  CameraModel.hpp  CameraModelBundle.cpp  CameraModelBundle.hpp  cameraModel.cpp  cameraModel.hpp
src/gaussian/: GaussianBlur.cpp  GaussianBlur.hpp
src/gaussian/kernels/: kernels.hpp  kernels.template.in  template.in
src/gaussian/kernels/opencl/: gaussian_blur.cl
src/image/: Image.cpp  Image.hpp
src/point-cloud/: PointCloud.cpp  PointCloud.hpp
src/renderer/: Renderer.cpp  Renderer.hpp
src/sift/: GaussianBlur.cpp  GaussianBlur.hpp  Matcher.cpp  Resize.cpp  Sift.cpp  Sift.hpp
src/sift/kernels/: kernels.hpp  kernels.template.in
src/sift/kernels/opencl/: gaussian_blur.cl  resize.cl
tests/: CMakeLists.txt
tests/algebra/SVD/: GolubKahan.cpp  Householder.cpp  QR.cpp  SVD.cpp
tests/algebra/compute/: Compute.cpp  Reduce.cpp  Scan.cpp  Sort.cpp
tests/algebra/core/: compute.cpp
tests/algebra/lib/: Reduce.cpp  Scan.cpp  Sort.cpp
tests/algebra/linear/: ConjugateGradient.cpp  Rotation.cpp  SingularValueDecomposition.cpp
tests/algebra/matrix/: BlockSparseMatrixData.cpp  BlockSparseMatrixMultiplayer.cpp  Determinant.cpp  Matrix.cpp  MatrixData.cpp  MatrixMultiplayer.cpp  SparseMatrixData.cpp  SparseMatrixMultiplayer.cpp
tests/algebra/polynomial/: Polynomial.cpp
tests/algebra/sparse/: SpMatrix.cpp  SparseMatrixData.cpp  SparseMatrixMultiplayer.cpp
tests/algebra/tensor/: Tensor.cpp
tests/bundle/: BundleAdjustment.cpp  Homography.cpp  helpers.hpp
tests/camera/: Camera.cpp
tests/gaussian/: a.out  test1.cpp
tests/linear/: ConjugateGradient.cpp
tests/sift/: sift.cpp
