cmake_minimum_required(VERSION 3.10)

include(CTest)

project(AlgebraComputeTests)
add_executable(AlgebraComputeTests algebra/core/compute.cpp)
target_link_libraries(AlgebraComputeTests karu)
add_test(NAME AlgebraComputeTests COMMAND AlgebraComputeTests)

project(AlgebraLibSortTests)
add_executable(AlgebraLibSortTests algebra/lib/Sort.cpp)
target_link_libraries(AlgebraLibSortTests karu)
add_test(NAME AlgebraLibSortTests COMMAND AlgebraLibSortTests)

project(AlgebraMatrixDataTests)
add_executable(AlgebraMatrixDataTests algebra/matrix/MatrixData.cpp)
target_link_libraries(AlgebraMatrixDataTests karu)
add_test(NAME AlgebraMatrixDataTests COMMAND AlgebraMatrixDataTests)

project(AlgebraMatrixMultiplayerTests)
add_executable(AlgebraMatrixMultiplayerTests algebra/matrix/MatrixMultiplayer.cpp)
target_link_libraries(AlgebraMatrixMultiplayerTests karu)
add_test(NAME AlgebraMatrixMultiplayerTests COMMAND AlgebraMatrixMultiplayerTests)

project(AlgebraSparseMatrixDataTests)
add_executable(AlgebraSparseMatrixDataTests algebra/matrix/SparseMatrixData.cpp)
target_link_libraries(AlgebraSparseMatrixDataTests karu)
add_test(NAME AlgebraSparseMatrixDataTests COMMAND AlgebraSparseMatrixDataTests)

project(AlgebraSparseMatrixMultiplayerTests)
add_executable(AlgebraSparseMatrixMultiplayerTests algebra/matrix/SparseMatrixMultiplayer.cpp)
target_link_libraries(AlgebraSparseMatrixMultiplayerTests karu)
add_test(NAME AlgebraSparseMatrixMultiplayerTests COMMAND AlgebraSparseMatrixMultiplayerTests)

